# Sloppy

./: .clang-format  .clang-tidy  .coderabbit.yaml  .editorconfig  .gitattributes  .gitignore  AGENTS.md  AGENTS_CONTRIBUTING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  RELEASE_INFRA_PLAN.md  RELEASE_NOTES.md  SECURITY.md  package-lock.json  package.json  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
compiler/: Cargo.toml
compiler/src/: bundle_emit.rs  capability_inference.rs  compiler_contract.rs  diagnostic.rs  effects.rs  fixtures.rs  framework_runtime.rs  graph.rs  hash.rs  lib.rs  main.rs  module_graph.rs  package_manager.rs  parser.rs  plan_emit.rs  resolver.rs  result_inference.rs  route_artifact.rs  schema_inference.rs  slop_dsl.rs  sloppyc.rs  sloppyc_tests.rs  source.rs  source_map.rs  static_eval.rs  symbols.rs  validation.rs  version.rs
compiler/src/plan_emit/: dependency_graph.rs  plan_helpers.rs
compiler/src/sloppyc/: app_features.rs  auth.rs  configuration.rs  effects.rs  emit.rs  ffi.rs  framework.rs  framework_features.rs  handler.rs  imports.rs  modules.rs  ops_docs.rs  program.rs  routes.rs  schema.rs  static_files.rs
compiler/src/sloppyc_tests/: assets_and_runtime_imports.rs  framework_runtime.rs  program_mode.rs
compiler/tests/: compiler_contract_validation.rs  compiler_fixture_harness.rs  compiler_scale_smoke.rs  npm_compat_build.rs  npm_compat_diagnostics.rs
compiler/tests/fixtures/: README.md
compiler/tests/fixtures/app-graph-dogfood/: input.ts
compiler/tests/fixtures/app-graph-dogfood/expected/: app.js  app.js.map  app.plan.json  routes.slrt
compiler/tests/fixtures/app-graph-dogfood/modules/: health.ts
compiler/tests/fixtures/async-handler/: input.js
compiler/tests/fixtures/builder-mapget/: input.js
compiler/tests/fixtures/computed-method/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/conditional-route-registration/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/effects-capability/: input.js
compiler/tests/fixtures/framework-metadata/: input.ts
compiler/tests/fixtures/framework-v2-metadata/: input.ts
compiler/tests/fixtures/full-framework-app-graph/: input.ts
compiler/tests/fixtures/function-handler/: input.js
compiler/tests/fixtures/function-module/: input.js
compiler/tests/fixtures/function-module-empty/: input.js
compiler/tests/fixtures/function-module-same-file/: input.js
compiler/tests/fixtures/grouped-route/: input.js
compiler/tests/fixtures/http-methods/: input.js
compiler/tests/fixtures/loop-route-registration/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/metadata-extraction/: input.js
compiler/tests/fixtures/missing-app/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/missing-provider-effect/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/missing-relative-import/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/multiple-apps/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/node-fs-import/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/non-sqlite-provider-bridge/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/partial-body-without-schema/: input.js
compiler/tests/fixtures/partial-dynamic-status/: input.js
compiler/tests/fixtures/provider-capability/: input.js
compiler/tests/fixtures/provider-metadata-multiple-databases/: input.js
compiler/tests/fixtures/realistic-users-api/: input.js
compiler/tests/fixtures/results-json/: input.js
compiler/tests/fixtures/source-map/: input.js
compiler/tests/fixtures/unsupported-app-middleware/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-async-handler-body/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-controller-mapping/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-cors-dynamic/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-data-import-alias/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-dynamic-import/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-dynamic-route/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-handler-capture/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-handler-parameter/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-handler-shape/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-health-captured-check/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-http-method/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-import-alias/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-import-specifier/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-provider-method/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-request-id-dynamic/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-request-logging-dynamic/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-route-options-dynamic-tags/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-secret-capability/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-sloppy-default-import/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-testing-import/: expected-diagnostics.txt  input.js
compiler/tests/fixtures/unsupported-typescript-handler/: expected-diagnostics.txt  input.ts
compiler/tests/regressions/: README.md
compiler/tests/regressions/local-call-shadowing/: case.json  input.ts
compiler/tests/regressions/package-dependency-resolution/: case.json
compiler/tests/regressions/provider-effect-readiness/: case.json  input.ts
compiler/tests/regressions/static-native-response/: case.json  input.ts
compiler/tests/regressions/transitive-imported-helper-chain/: case.json  helpers.ts  input.ts
(+2700 files in other folders)
